# CAA_Labo2

./: README.md  laboratoire CAA - 2.md
Laboratoire_2/: Cargo.toml
Laboratoire_2/src/: main.rs
client/: Cargo.toml  cipher  file.metadata  filename
client/file/: test.txt
client/src/: main.rs
server/: Cargo.toml  foo.txt  shadow  shadow.metadata
server/src/: main.rs
