[package]
name = "laboratoire_2"
version = "0.1.0"
authors = ["jerome <jerome.arn@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.6"
hmac = "0.10.1"
sha2 = "0.9.1"
aes-gcm = "0.3.0"
generic-array = "0.14.4"
rand = "0.8.0"
rand_core = "0.6.0"
aead = "0.2.0"
ecies = "0.2.0"
