[package]
name = "client"
version = "0.1.0"
authors = ["jerome <jerome.arn@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.1.1"
http = "0.1.17"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
serde_derive = "1.0"
sodiumoxide = "0.2.6"
futures = "0.3.15"
