[package]
name = "client"
version = "0.1.0"
authors = ["jerome <jerome.arn@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.1.0"
http = "0.1.17"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
serde_derive = "1.0"
sodiumoxide = "0.2.6"
futures = "0.3.15"
hmac = "0.10.1"
sha2 = "0.9.1"
aes-gcm = "0.3.0"
generic-array = "0.14.4"
aead = "0.2.0"
rand = "0.8.0"
rand_core = "0.6.0"
ecies = "0.2.0"
