[package]
name = "server"
version = "0.1.0"
authors = ["jerome <jerome.arn@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
futures = "0.3.15"
sodiumoxide = "0.2.6"
hmac = "0.10.1"
sha2 = "0.9.1"
aes-gcm = "0.9.0"
generic-array = "0.14.4"
rand = "0.8.0"
rand_core = "0.6.0"
lazy_static = "1.3.0"
actix-http = "2.2.0"
serde = "1.0.126"
serde_json = "1.0.61"
uuid = { version = "0.4", features = ["serde", "v4"] }
google-authenticator = {version = "0.2.1", features = ["with-qrcode"]}
aead = "0.2.0"
